# playground

./: LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: step2.yml
GithubWorkshop/: README.md
GithubWorkshop/calculator/src/: main.c
ai/tweet-generator-langchain/: README.md  app.py  pyproject.toml
aleph/: HomeView.ts
aleph/upload-file-app/: package.json
aleph/upload-file-app/src/: App.tsx
api/gin/poc-pool/: .env.example  go.mod  go.sum  main.go
api/graphql/: step1.gql
api/graphql/frontend/: package.json
api/nest/api-tutorial/: .gitignore  (+2 more)
devops/: cd.yml
go/meetup-scaleway/: Makefile  main.go
graphql/: README.md
graphql/backend/: .eslintrc.js  package.json
grpc/basic-api-go/: go.mod
next/clerk/: package-lock.json  package.json
next/nextjs-blog/: package-lock.json
openapi/: spec.yaml
prisma/prisma-nexus-gql/: package-lock.json  package.json  tsconfig.json
prisma/starter/: package-lock.json  package.json  script.js
scripts/epitech/: coding-style.sh
scripts/gemoji-name-to-unicode/: .eslintrc.yaml  package-lock.json  package.json  tsconfig.json
tezos/: tutorials.md
tezos/completium-dapp-first/: .eslintrc.yaml  .gitpod.yml  Dockerfile  README.md  index.html  package-lock.json  package.json
tezos/contracts/: increment.tz
tezos/smartpy/: IncrementVerification.py  OwnerCollector.py  StoreString.py
typescript/pool2022-day01/: .eslintrc.js  package-lock.json  package.json
wasm/: index.js
wasm-test/: Cargo.toml
wasm-test/src/: lib.rs
wasm/wasm-test/: LICENSE  README.md
(+302 files in other folders)
